--- a/chatbot.html
+++ b/chatbot.html
@@ -48,8 +48,8 @@
                         
                         <footer>
                             <div id="command">
-                                <input placeholder="Ask Ersatz anything" type="text" />
-                                <button class="shadow nice-font">▷</button>
+                                <input placeholder="Press Enter to input command" type="text" />
+                               
                             </div>
                         </footer>
                     </div>
