--- a/chatbot.html
+++ b/chatbot.html
@@ -49,7 +49,7 @@
                         <footer>
                             <div id="command">
                                 <input placeholder="Press Enter to input command" type="text" />
-                               
+                               <button class="shadow nice-font">▷</button>
                             </div>
                         </footer>
                     </div>
