--- a/chatbot.html
+++ b/chatbot.html
@@ -48,7 +48,7 @@
                         
                         <footer>
                             <div id="command">
-                                <input placeholder="Press Enter to input command" type="text" />
+                                <input placeholder="Press Enter to input" type="text" />
                                
                             </div>
                         </footer>
